[tool.poetry]
name = "jiav-example"
version = "0.1.0"
description = "jiav example backend"
authors = ["Vadim Khitrin <me@vkhitrin.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/vkhitrin/jiav-backend-template"
repository = "https://github.com/vkhitrin/jiav-backend-template"
documentation = "https://jiav.readthedocs.io"
packages = [{ include = "jiav_example", from = "src" }]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'License :: OSI Approved :: BSD License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Topic :: Utilities',
]

[tool.poetry.plugins."jiav.backend"]
example = "jiav_example.ExampleBackend"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
files = ["src/**/*.py", "tests/**/*.py"]
mypy_path = "src"
show_column_numbers = true
follow_imports = "normal"
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_reexport = true
strict_equality = true
